// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth ui: should handle START_FETCHING action 1`] = `
Immutable.Map {
  "isFetching": true,
}
`;

exports[`auth ui: should handle STOP_FETCHING action 1`] = `
Immutable.Map {
  "isFetching": true,
}
`;

exports[`auth ui: should return state by default 1`] = `
Immutable.Map {
  "isFetching": false,
}
`;
